--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "lwrjs-env-module-provider",
-  "version": "1.0.0",
-  "description": "A module provider for environment variables in LWR",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "license": "BSD-3-Clause",
+  "publishConfig": {
+    "access": "public"
   },
+  "homepage": "https://github.com/eschweitzer78/lwrjs-env-module-provider#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eschweitzer78/lwrjs-env-module-provider.git"
   },
+  "bugs": {
+    "url": "https://github.com/eschweitzer78/lwrjs-env-module-provider/issues"
+  },
+  "type": "module",
+  "main": "index.cjs",
+  "module": "index.js",
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.cjs"
+    }
+  },
+  "files": [
+    "*.js",
+    "*.cjs"
+  ],
+  "version": "1.0.0",
+  "description": "A module provider for environment variables in LWR",
   "keywords": [
     "LWR",
     "module",
     "provider"
   ],
   "author": "Emmanuel Schweitzer",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/eschweitzer78/lwrjs-env-module-provider/issues"
-  },
-  "homepage": "https://github.com/eschweitzer78/lwrjs-env-module-provider#readme"
+  "engines": {
+    "node": ">=14.15.4 < 19"
+  }
 }
